--- a/app/app/src/pages/index.astro
+++ b/app/app/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '~/layouts/Layout.astro'
 import LocaleSwitch from '~/components/LocaleSwitch.astro'
-// import AppForm from '~/components/AppForm.svelte'
+import AppForm from '~/components/AppForm.svelte'
 import Footer from '~/components/Footer.astro'
 
 import { i18nFactory } from '~/i18n'
@@ -24,7 +24,7 @@ const _ = i18nFactory(Astro.currentLocale as any)
 				{_('Online TOTP codes generator.')}
 			</p>
 
-			<!-- <AppForm class="home text-black group-hover:text-gray mt-4" locale={Astro.currentLocale} client:load /> -->
+			<AppForm class="home text-black group-hover:text-gray mt-4" locale={Astro.currentLocale} client:load />
 		</div>
 
 		<Footer class="w-full" />
